Supports multiple departments

--- a/personio.html
+++ b/personio.html
@@ -3,9 +3,11 @@
         <script src="./personio.js"></script>
         <h1>All</h1>
         <div class="personio-jobs"></div>
+        <hr>
         <h1>Sales</h1>
         <div class="personio-jobs" data-department="Sales"></div>
-        <h1>R&D</h1>
-        <div class="personio-jobs" data-department="R&D"></div>
+        <hr>
+        <h1>S&M</h1>
+        <div class="personio-jobs" data-department="Sales,Marketing"></div>
     </body>
 </html>
